--- a/Pop.html
+++ b/Pop.html
@@ -28,7 +28,6 @@ body { color: #9acc79; }"
       <div class="container">
         <a href="index.html" class="btn">Back to Stash</a>
         <h2></h2>
-
 ./4Minute<br>
 ./4Minute/2YOON - Harvest Moon EP (2013)<br>
 ./4Minute/Albums<br>
@@ -42,20 +41,46 @@ body { color: #9acc79; }"
 ./4Minute/EPs/[2013] Name Is 4minute EP<br>
 ./4Minute/EPs/[2014] 4minute World EP<br>
 ./4Minute/EPs/[2015] Crazy EP<br>
+./4Minute/EPs/[2016] Act. 7<br>
 ./After School<br>
 ./After School/[2011] Virgin [Korean]<br>
-./After School/[2102] Playgirlz [Japanese]<br>
+./After School/[2012] Playgirlz [Japanese]<br>
 ./Ariana Grande<br>
-./Ariana Grande/[2011] Put Your Hearts Up [Single]<br>
-./Ariana Grande/[2013] Christmas Kisses EP [2014 Japanese Edition] (FLAC)<br>
-./Ariana Grande/[2013] The Way (Feat. Mac Miller) [Single]<br>
-./Ariana Grande/[2013] Yours Truly (FLAC)<br>
-./Ariana Grande/[2014] My Everything [Deluxe Edition] (FLAC)<br>
-./Ariana Grande/[2014] Santa Tell Me [Single] (FLAC)<br>
-./Ariana Grande/[2015] Christmas & Chill EP (FLAC)<br>
-./Ariana Grande/[2015] Focus [Single] (FLAC)<br>
-./Ariana Grande/[2016] Dangerous Woman [Deluxe Edition] (FLAC)<br>
-./Ariana Grande/Ariana Grande - Love The Way You Lie UNFINISHED_data<br>
+./Ariana Grande/Albums<br>
+./Ariana Grande/Albums/[2013] Yours Truly (FLAC)<br>
+./Ariana Grande/Albums/[2014] My Everything [Deluxe Edition] (FLAC)<br>
+./Ariana Grande/Albums/[2016] Dangerous Woman [Deluxe Edition] (FLAC)<br>
+./Ariana Grande/EPs<br>
+./Ariana Grande/EPs/[2013] Christmas Kisses EP [2014 Japanese Edition] (FLAC)<br>
+./Ariana Grande/EPs/[2014] Bang Bang [Remixes] EP<br>
+./Ariana Grande/EPs/[2014] Problem (Feat. Iggy Azalea) EP<br>
+./Ariana Grande/EPs/[2015] Christmas & Chill EP (FLAC)<br>
+./Ariana Grande/Misc<br>
+./Ariana Grande/Misc/Ariana Grande - Love The Way You Lie UNFINISHED_data<br>
+./Ariana Grande/Remixes<br>
+./Ariana Grande/Remixes/[2013] Baby I [Remixes]<br>
+./Ariana Grande/Remixes/[2013] Right There [Remixes]<br>
+./Ariana Grande/Remixes/[2013] The Way [Remixes]<br>
+./Ariana Grande/Remixes/[2014] Bang Bang [The Remixes]<br>
+./Ariana Grande/Remixes/[2014] Break Free [Remixes]<br>
+./Ariana Grande/Remixes/[2014] Love Me Harder [Remixes]<br>
+./Ariana Grande/Remixes/[2014] Problem [Remixes]<br>
+./Ariana Grande/Remixes/[2015] Focus [Remixes]<br>
+./Ariana Grande/Remixes/[2015] One Last Time [Remixes]<br>
+./Ariana Grande/Remixes/[2015] The Remix [Japanese Edition]<br>
+./Ariana Grande/Remixes/[2015] The Remix [Japanese Edition]/Scans<br>
+./Ariana Grande/Remixes/[2016] Dangerous Woman [Remixes]<br>
+./Ariana Grande/Remixes/[2016] Into You [The Funky Villains Vocal Mix] (FLAC)<br>
+./Ariana Grande/Singles<br>
+./Ariana Grande/Singles/[2011] Put Your Hearts Up [Single]<br>
+./Ariana Grande/Singles/[2012] Popular Song (Feat. MIKA)<br>
+./Ariana Grande/Singles/[2013] The Way (Feat. Mac Miller) [Single]<br>
+./Ariana Grande/Singles/[2013] The Way (Feat. Mac Miller) [Spanglish Version]<br>
+./Ariana Grande/Singles/[2014] Brand New you<br>
+./Ariana Grande/Singles/[2014] Santa Tell Me [Single] (FLAC)<br>
+./Ariana Grande/Singles/[2015] Focus [Japanese Deluxe Edition]<br>
+./Ariana Grande/Singles/[2015] Focus [Japanese Deluxe Edition]/Scans<br>
+./Ariana Grande/Singles/[2015] Focus [Single] (FLAC)<br>
 ./AWOLNATION<br>
 ./AWOLNATION/[2010] Back from Earth EP<br>
 ./AWOLNATION/[2011] Megalithic Symphony<br>
@@ -176,7 +201,9 @@ body { color: #9acc79; }"
 ./HyunA/[2013] My Color [Single]<br>
 ./HyunA/[2014] A Talk EP<br>
 ./HyunA/[2015] A+<br>
+./HyunA/[2016] A'wesome EP<br>
 ./HyunA/Trouble Maker - Trouble Maker (2011)<br>
+./Jessica - With Love, J [Int’l Version] (2016) - MP3 320 (WEB)<br>
 ./Jon Hopkins & Purity Ring -  Breathe This Air - Amenamy (2013) (FLAC)<br>
 ./Julia Volkova<br>
 ./Julia Volkova/Demo<br>
@@ -303,6 +330,7 @@ body { color: #9acc79; }"
 ./Radiohead/LPs/[2003] Hail to the Thief<br>
 ./Radiohead/LPs/[2007] In Rainbows<br>
 ./Radiohead/LPs/[2011] The King of Limbs<br>
+./Radiohead/LPs/[2016] A Moon Shaped Pool<br>
 ./Rick Astley - Never Gonna Give You Up [RCA 6784-1-RD] (1987)<br>
 ./Rihanna<br>
 ./Rihanna/[2010] Loud<br>
@@ -387,6 +415,8 @@ body { color: #9acc79; }"
 ./Victoria Justice/[2011] You're the Reason (Acoustic Version) [Single] (FLAC)<br>
 ./Victoria Justice/[2013] Gold [Single]<br>
 ./Victoria Justice/[2013] Gold [Single] (FLAC)<br>
-
+./Yumi Zouma<br>
+./Yumi Zouma/[2015] EP 1 & 2<br>
+./Yumi Zouma/[2016] Yoncalla<br>
 </body>
 </html>
